rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__wrong_tokens.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_err(stringify! (wrong_tokens), \"\\\"foo\")"
---
error: Error during tokenization: Unclosed string literal.
  ┌─ wrong_tokens:1:1
  │
1 │ "foo
  │ ^^^^ Error during tokenization: Unclosed string literal.
